--- a/.github/workflows/token-translator.yml
+++ b/.github/workflows/token-translator.yml
@@ -27,11 +27,11 @@ jobs:
 
       - name: Install token-transformer
         run: npm install token-transformer
-        working-directory: ./token-translation
+        working-directory: ./tokens
       
       - name: Run token-transformer
         run: npx token-transformer tokens/tokens.json tokens/transformed-tokens.json
-        working-directory: ./token-translation
+        working-directory: ./tokens
       
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
